// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PluginStatusBadge snapshots > pins the brand-styled badge for state=active 1`] = `
<DocumentFragment>
  <span
    aria-label="Status: Active"
    data-state="active"
    style="display: inline-flex; align-items: center; gap: 6px; padding: 2px 10px; border-radius: var(--r-pill); background: var(--emerald-soft); color: var(--emerald-deep); font-family: var(--font-sans); font-size: var(--t-xs); font-weight: 500; letter-spacing: 0.01em; line-height: 1.4;"
  >
    <span
      aria-hidden="true"
      style="width: 6px; height: 6px; border-radius: 999px; background: currentcolor; opacity: 0.9; flex: 0 0 auto;"
    />
    Active
  </span>
</DocumentFragment>
`;

exports[`PluginStatusBadge snapshots > pins the brand-styled badge for state=errored 1`] = `
<DocumentFragment>
  <span
    aria-label="Status: Errored"
    data-state="errored"
    style="display: inline-flex; align-items: center; gap: 6px; padding: 2px 10px; border-radius: var(--r-pill); background: var(--danger-soft); color: var(--danger); font-family: var(--font-sans); font-size: var(--t-xs); font-weight: 500; letter-spacing: 0.01em; line-height: 1.4;"
  >
    <span
      aria-hidden="true"
      style="width: 6px; height: 6px; border-radius: 999px; background: currentcolor; opacity: 0.9; flex: 0 0 auto;"
    />
    Errored
  </span>
</DocumentFragment>
`;

exports[`PluginStatusBadge snapshots > pins the brand-styled badge for state=inactive 1`] = `
<DocumentFragment>
  <span
    aria-label="Status: Inactive"
    data-state="inactive"
    style="display: inline-flex; align-items: center; gap: 6px; padding: 2px 10px; border-radius: var(--r-pill); background: var(--paper-3); color: var(--fg-muted); font-family: var(--font-sans); font-size: var(--t-xs); font-weight: 500; letter-spacing: 0.01em; line-height: 1.4;"
  >
    <span
      aria-hidden="true"
      style="width: 6px; height: 6px; border-radius: 999px; background: currentcolor; opacity: 0.9; flex: 0 0 auto;"
    />
    Inactive
  </span>
</DocumentFragment>
`;

exports[`PluginStatusBadge snapshots > pins the brand-styled badge for state=installed 1`] = `
<DocumentFragment>
  <span
    aria-label="Status: Installed"
    data-state="installed"
    style="display: inline-flex; align-items: center; gap: 6px; padding: 2px 10px; border-radius: var(--r-pill); background: var(--lavender-soft); color: var(--lavender-deep); font-family: var(--font-sans); font-size: var(--t-xs); font-weight: 500; letter-spacing: 0.01em; line-height: 1.4;"
  >
    <span
      aria-hidden="true"
      style="width: 6px; height: 6px; border-radius: 999px; background: currentcolor; opacity: 0.9; flex: 0 0 auto;"
    />
    Installed
  </span>
</DocumentFragment>
`;

exports[`PluginStatusBadge snapshots > pins the brand-styled badge for state=pending_uninstall 1`] = `
<DocumentFragment>
  <span
    aria-label="Status: Uninstalling…"
    data-state="pending_uninstall"
    style="display: inline-flex; align-items: center; gap: 6px; padding: 2px 10px; border-radius: var(--r-pill); background: var(--warning-soft); color: var(--warning); font-family: var(--font-sans); font-size: var(--t-xs); font-weight: 500; letter-spacing: 0.01em; line-height: 1.4;"
  >
    <span
      aria-hidden="true"
      style="width: 6px; height: 6px; border-radius: 999px; background: currentcolor; opacity: 0.9; flex: 0 0 auto;"
    />
    Uninstalling…
  </span>
</DocumentFragment>
`;
